Use the `files` directive instead of `.npmignore`
While `.npmignore` is a blacklist, `files` is a whitelist, which is much more maintainable.

--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
         "regex",
         "regexp"
     ],
-    "main": "./xregexp-all.js"
+    "main": "xregexp-all.js",
+    "files": [
+        "LICENSE.txt",
+        "xregexp-all.js"
+    ]
 }
