--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
 # Compiled Python files
 *.pyc
 
+# Installed npm modules
+node_modules
+
 # Folder view configuration files
-desktop.ini
 .DS_Store
+Desktop.ini
+
+# Thumbnail cache files
+._*
+Thumbs.db
+
+# Files that might appear on external disks
+.Spotlight-V100
+.Trashes
