--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "xregexp",
-    "version": "3.0.0",
+    "version": "3.1.0-dev",
     "description": "Extended regular expressions",
     "homepage": "http://xregexp.com/",
     "author": "Steven Levithan <steves_list@hotmail.com>",
