--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "xregexp",
-    "version": "3.1.1",
+    "version": "3.1.1-next",
     "description": "Extended regular expressions",
     "homepage": "http://xregexp.com/",
     "authors": [
