--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
   "plugins": [
+    "babel-plugin-transform-string-raw",
     "add-module-exports",
     "transform-xregexp",
     "array-includes"
