Simplify Unicode build scripts
This uses node-unicode-data instead of Python scripts, reducing the
need to maintain the Unicode data parser as part of this repository.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "scripts": {
     "lint": "eslint src tests",
     "babel": "babel src -d lib",
+    "build-unicode-data": "node tools/scripts/block-regex.js && node tools/scripts/category-regex.js && node tools/scripts/property-regex.js && node tools/scripts/script-regex.js",
     "prebuild": "npm run lint && npm run babel",
     "build": "browserify lib/index.js --standalone XRegExp > xregexp-all.js",
     "pretest": "npm run build",
@@ -42,6 +43,9 @@
     "browserify": "^12.0.1",
     "eslint": "^3.19.0",
     "jasmine": "^2.5.3",
+    "jsesc": "^2.5.1",
+    "unicode-9.0.0": "^0.7.4",
+    "unicode-property-value-aliases": "^3.0.0",
     "zuul": "^3.11.1"
   }
 }
