--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xregexp",
-  "version": "4.0.0-next",
+  "version": "4.1.0",
   "description": "Extended regular expressions",
   "homepage": "http://xregexp.com/",
   "author": "Steven Levithan <steves_list@hotmail.com>",
