Add tools to package.json and remove license since it's auto-included

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "files": [
     "src",
     "lib",
-    "xregexp-all.js",
-    "LICENSE"
+    "tools",
+    "xregexp-all.js"
   ],
   "scripts": {
     "lint": "eslint .",
