--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
     "prepublish": "npm test"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
+    "@babel/cli": "^7.0.0-beta.47",
+    "@babel/core": "^7.0.0-beta.47",
+    "@babel/preset-env": "^7.0.0-beta.47",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-array-includes": "^2.0.3",
     "babel-plugin-transform-xregexp": "^0.0.6",
-    "babel-preset-env": "^1.4.0",
     "browserify": "^16.2.0",
     "eslint": "^4.19.1",
     "jasmine": "^3.1.0",
