--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "babel-cli": "^6.24.1",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-array-includes": "^2.0.3",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-xregexp": "^0.0.6",
     "babel-preset-env": "^1.4.0",
     "eslint": "^4.19.1",
