Remove UMD/minified files from dist/
This makes it so that only `dist/index-es.js` is added to the files published,
and so that the package size (shown by `npm pack`) is 220 kB rather than 493 kB,
compared to the master branch size of 158 kB.

Since we didn't publish minified files before, we don't necessarily need
to start now, especially since users should be minifying
for themselves.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "unicode"
   ],
   "main": "./lib",
-  "module": "./dist/index-es.min.js",
+  "module": "./dist/index-es.js",
   "files": [
     "dist",
     "src",
@@ -69,8 +69,6 @@
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-re": "^1.0.7",
-    "rollup-plugin-uglify": "^3.0.0",
-    "uglify-es": "^3.3.9",
     "unicode-10.0.0": "^0.7.5",
     "unicode-property-value-aliases": "^3.0.0",
     "zuul": "^3.11.1"
