Polyfill Symbol with @babel/plugin-transform-runtime
This should fix https://github.com/slevithan/xregexp/issues/254

See https://babeljs.io/docs/en/babel-plugin-transform-runtime

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
   "plugins": [
+    "@babel/plugin-transform-runtime",
     "add-module-exports",
     "transform-xregexp",
     "array-includes"
