--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.47",
     "@babel/core": "^7.0.0-beta.47",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.53",
     "@babel/preset-env": "^7.0.0-beta.47",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-array-includes": "^2.0.3",
@@ -48,5 +49,8 @@
     "unicode-11.0.0": "^0.7.7",
     "unicode-property-value-aliases": "^3.0.0",
     "zuul": "^3.11.1"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.0.0-beta.53"
   }
 }
