--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,11 @@
 {
   "plugins": [
-    "@babel/plugin-transform-runtime",
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "corejs": 2,
+      },
+    ],
     "add-module-exports",
     "transform-xregexp",
     "array-includes"
