--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "prepublish": "npm test"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.47",
-    "@babel/core": "^7.0.0-beta.47",
-    "@babel/plugin-transform-runtime": "7.0.0-beta.53",
-    "@babel/preset-env": "^7.0.0-beta.47",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-array-includes": "^2.0.3",
     "babel-plugin-transform-xregexp": "^0.0.6",
@@ -51,6 +51,6 @@
     "zuul": "^3.11.1"
   },
   "dependencies": {
-    "@babel/runtime": "7.0.0-beta.53"
+    "@babel/runtime-corejs2": "^7.2.0"
   }
 }
