feat(babel): remove babel helper from dependencies as core-js2 outdated

--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
     [
       "@babel/plugin-transform-runtime",
       {
-        "corejs": 2,
+        "helpers": false,
       },
     ],
     "add-module-exports",
