expose esm entry for rollup/webpack

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "regular expression",
     "unicode"
   ],
-  "main": "./lib",
+  "main": "./lib/index.js",
+  "module": "./src/index.js",
   "files": [
     "src",
     "lib",
