--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,7 @@
         "corejs": 3,
       },
     ],
+    "@babel/plugin-proposal-export-namespace-from",
     "add-module-exports",
     "transform-xregexp",
     "array-includes"
