--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@babel/core": "^7.12.3",
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
+    "@unicode/unicode-13.0.0": "^1.0.2",
     "babel-plugin-add-module-exports": "^1.0.4",
     "babel-plugin-array-includes": "^2.0.3",
     "babel-plugin-transform-xregexp": "^1.0.0",
@@ -51,8 +52,7 @@
     "eslint": "^7.12.1",
     "jasmine": "^3.6.2",
     "jsesc": "^3.0.1",
-    "unicode-12.1.0": "^0.8.0",
-    "unicode-property-value-aliases": "^3.0.0",
+    "unicode-property-value-aliases": "^3.5.0",
     "zuul": "^3.12.0"
   },
   "dependencies": {
