--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Use Node.js
       uses: actions/setup-node@v1
-    - run: npm install -g npm@7
+      with:
+        node-version: '15'
     - run: npm install
     - run: npm test
     - shell: bash
