Fix package versions after merge

--- a/package.json
+++ b/package.json
@@ -38,20 +38,23 @@
   },
   "types": "types",
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
     "@rollup/plugin-commonjs": "^14.0.0",
+    "@unicode/unicode-13.0.0": "^1.0.2",
+    "babel-plugin-add-module-exports": "^1.0.4",
     "babel-plugin-array-includes": "^2.0.3",
     "babel-plugin-transform-xregexp": "^1.0.0",
-    "dtslint": "^3.6.14",
-    "eslint": "^7.6.0",
-    "jasmine": "^3.6.1",
+    "dtslint": "^2.0.5",
+    "eslint": "^7.12.1",
+    "jasmine": "^3.6.2",
     "jsesc": "^3.0.1",
+    "rollup": "^2.23.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-eslint": "^7.0.0",
-    "rollup": "^2.23.0",
     "typescript": "^3.9.7",
-    "unicode-12.1.0": "^0.8.0",
     "unicode-property-value-aliases": "^3.5.0"
   }
 }
