--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
   "plugins": [
+    ["@babel/plugin-proposal-unicode-property-regex", { "useUnicodeFlag": false }],
     [
       "@babel/plugin-transform-runtime",
       {
