--- a/.babelrc
+++ b/.babelrc
@@ -4,8 +4,8 @@
     [
       "@babel/plugin-transform-runtime",
       {
-        "corejs": 3,
-      },
+        "corejs": 3
+      }
     ],
     "add-module-exports",
     "transform-xregexp",
