--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "types/index.d.ts"
   ],
   "scripts": {
-    "lint": "eslint . && npm run dtslint",
-    "dtslint": "dtslint types",
+    "lint": "eslint .",
     "babel": "babel src -d lib",
     "build-unicode-data": "node tools/scripts/category-regex.js && node tools/scripts/property-regex.js && node tools/scripts/script-regex.js",
     "prebuild": "npm run build-unicode-data && npm run lint && npm run babel",
@@ -38,24 +37,23 @@
   },
   "types": "types/index.d.ts",
   "devDependencies": {
-    "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.16.5",
-    "@babel/plugin-proposal-unicode-property-regex": "^7.16.5",
-    "@babel/plugin-transform-runtime": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
-    "@unicode/unicode-14.0.0": "^1.2.1",
+    "@babel/cli": "^7.24.6",
+    "@babel/core": "^7.24.6",
+    "@babel/plugin-proposal-unicode-property-regex": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.24.6",
+    "@babel/preset-env": "^7.24.6",
+    "@unicode/unicode-14.0.0": "^1.5.2",
     "babel-plugin-add-module-exports": "^1.0.4",
     "babel-plugin-array-includes": "^2.0.3",
     "babel-plugin-transform-xregexp": "^1.0.0",
     "browserify": "^17.0.0",
-    "dtslint": "^2.0.6",
-    "eslint": "^8.5.0",
-    "jasmine": "^3.10.0",
+    "eslint": "^8.57.0",
+    "jasmine": "^5.1.0",
     "jsesc": "^3.0.2",
     "nyc": "^15.1.0",
-    "unicode-property-value-aliases": "^3.6.0"
+    "unicode-property-value-aliases": "^3.7.1"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "^7.16.5"
+    "@babel/runtime-corejs3": "^7.24.6"
   }
 }
